--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,9 +93,15 @@ a {
     right: 3px;
 }
 
-.moon i {
+.light {
+    color: white !important;
+}
+
+.moon-dark {
     color: black !important;
 }
+
+
 
 .trans i {
     color: white !important;
@@ -661,13 +667,8 @@ header {
     opacity: 0.7;
 }
 
-.info .row {
-    /* min-height: 500px; */
-    background: rgb(237, 114, 63);
+.dark .info .row {
     background: linear-gradient(90deg, rgba(237, 114, 63, 80%) 0%, rgba(73, 114, 133, 80%) 100%);
-
-
-
 }
 
 /* strat left side  */
@@ -1989,7 +1990,7 @@ header {
     color: #fff;
 }
 
- .social-links a {
+.social-links a {
     font-size: 18px;
     display: inline-block;
     background: #292929;
@@ -2112,6 +2113,51 @@ header {
 }
 
 /***************************************************************************************/
+/* Dark and light mood */
+/***************************************************************************************/
+.light-mode {
+    background-color: white;
+    color: black !important;
+}
+
+.light-mode .Navbar {
+    background: white;
+}
+
+.light-mode .Navbar .navbar-nav a {
+    color: black !important;
+    font-weight: bold;
+}
+
+.light-mode .active_ar::after {
+    height: 6px;
+}
+
+.light-mode .header-login a {
+    color: black !important;
+}
+
+.light-mode .info .row {
+    background-color: white;
+}
+
+.light-mode .info p {
+    color: black;
+}
+
+.light-mode .recent-work {
+    background-color: #f6f6f6;
+}
+
+.light-mode .recent-work .cool-bag {
+    background-color: white;
+}
+
+.light-mode .container .card {
+    background-color: #393e461f;
+}
+
+/***************************************************************************************/
 /* Arabic Css */
 /***************************************************************************************/
 .Arabic {
@@ -2121,7 +2167,8 @@ header {
     transition: all .3s;
 
 }
-.Arabic .slide-text{
+
+.Arabic .slide-text {
     right: 100%;
     left: 0;
 }
@@ -2204,6 +2251,7 @@ header {
 .active_ar4:hover::after {
     width: 100px;
 }
+
 /****/
 .active_ar5::after {
     width: 0px;
@@ -2214,6 +2262,7 @@ header {
 .active_ar5:hover::after {
     width: 80px;
 }
+
 /****/
 .active_ar6::after {
     width: 0px;
@@ -2224,8 +2273,17 @@ header {
 .active_ar6:hover::after {
     width: 100px;
 }
-.Arabic #footer .footer-top .footer-links ul i{
+
+.Arabic #footer .footer-top .footer-links ul i {
     padding: 0 0 0 10px;
+}
+
+.Arabic .register {
+    direction: rtl;
+}
+
+.Arabic .register form .field .icon {
+    right: 90%;
 }
 
 @media screen and (max-width:768px) {
