--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,12 @@
 img {
     width: 100%;
 }
-
-
+::placeholder{
+    text-transform: capitalize;
+}
+.btn-sign{
+   border: 2px solid #D65A31; 
+}
 a:hover {
     text-decoration: none;
 }
@@ -418,6 +422,9 @@ header {
     z-index: 1;
     transition: all .3s;
     overflow: hidden;
+}
+.btn-sign{
+    color: black !important;
 }
 
 .Btn::after {
