--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,19 +1,26 @@
 img {
     width: 100%;
 }
-::placeholder{
+
+::placeholder {
     text-transform: capitalize;
 }
-.btn-sign{
-   border: 2px solid #D65A31; 
+
+.btn-sign {
+    border: 2px solid #D65A31;
 }
+
 a:hover {
     text-decoration: none;
 }
 
 .p-70 {
     padding: 70px 0;
-    /* background-color: rgb(245, 216, 162); */
+}
+
+.signupLink,
+.signupLink a {
+    font-weight: bold;
 }
 
 .p-30 {
@@ -59,21 +66,33 @@ a {
 
 
 /*##################*/
-/* rigth-icons */
+/* right-Buttons-mode */
 /*###################*/
 .slide-text {
 
     padding: 10px;
     position: fixed;
-    /* background-color: rgb(248, 240, 240); */
-    /* background: linear-gradient(to bottom, #282c3f, #ee5f73); */
+
     background: linear-gradient(to bottom, #282c3f, #e45927);
     top: 25%;
     right: 0;
-    width: 40px;
+    width: 0px;
     margin: auto;
     border-radius: 5px;
     z-index: 1112222222;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.slide-text:hover {
+    width: 40px;
+}
+
+#translate {
+    background-color: transparent !important;
+    border: none;
+    margin: auto;
+    padding: 2px;
 }
 
 .slide-text span i {
@@ -104,8 +123,6 @@ a {
 .moon-dark {
     color: black !important;
 }
-
-
 
 .trans i {
     color: white !important;
@@ -214,6 +231,11 @@ header {
 
 }
 
+.contact-nav::after{
+    width: 90px !important;
+    left: 0;
+}
+
 /* loading */
 
 .loader {
@@ -260,15 +282,6 @@ header {
         background-size: 10px 3px, 10px 3px, 10px 3px, 10px 10px, 10px 30px, 10px 50px
     }
 }
-
-
-
-
-
-
-
-
-
 
 .loading-spiner {
     position: fixed;
@@ -423,7 +436,8 @@ header {
     transition: all .3s;
     overflow: hidden;
 }
-.btn-sign{
+
+.btn-sign {
     color: black !important;
 }
 
